# gnl-tester

./: CMakeLists.txt  Makefile  README.md  main.cpp
test/: sample10.txt  some_lines.txt
